--- a/package.json
+++ b/package.json
@@ -6,10 +6,21 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^16.11.24",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.5.5",
+    "web-vitals": "^2.1.4",
+    "canvas-confetti": "^1.4.0",
+    "classnames": "^2.3.1",
+    "lodash": "^4.17.21",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "@types/canvas-confetti": "^1.4.2"
+    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,12 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+
   "browserslist": {
     "production": [
       ">0.2%",
